feat: add swagger docs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["CNET", "Jeread", "Krus", "nadeemshareef", "Sentex"]
+  "cSpell.words": [
+    "CNET",
+    "Jeread",
+    "Krus",
+    "nadeemshareef",
+    "openapi",
+    "Sentex"
+  ]
 }
