--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "express": "4.17.1",
     "mochawesome": "6.1.1",
-    "mongoose": "^5.10.15"
+    "mongoose": "^5.10.15",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "mocha": "^8.2.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "mocha": "^8.2.1"
   }
 }
